<resources>
    <string name="app_name">ToDoListN-Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="priority">Prioridad</string>
    <string name="term_limit">Limite de Termino</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Guardar</string>

    <array name="priority_array">
        <item>Importante</item>
        <item>No mucho</item>
        <item>Mas o menos</item>
        <item>MVV</item>
    </array>

</resources>
