<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bytemx.com.mx.todolistn_android.fragments.AddTaskFragment">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_title"
        android:text="@string/title"
        android:paddingLeft="@dimen/padding_small"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtTitle"
        android:textSize="@dimen/font_style1"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_title"
        android:text="@string/description"
        android:paddingTop="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_small"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtDesc"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_style1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_title"
        android:text="@string/priority"
        android:paddingTop="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_small"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spiPriority" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_title"
        android:text="@string/term_limit"
        android:paddingLeft="@dimen/padding_small"/>

   <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btSave"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

</ScrollView>




